# WorkflowAI

./: .env.sample  .gitignore  .trivyignore  AGENTS.md  BUG_REPORT_AND_FIX.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  agents.md  api.Dockerfile  client.Dockerfile  docker-compose.yml  documentation_review_findings.md  package.json  pyproject.toml  pytest.ini
.company/: employee-onboarding.md
.cursor/: environment.json
.cursor/rules/: logging.mdc  python.mdc  style.mdc  tests.mdc  typing.mdc
.discussions/: elegant_sorting_implementation.md  june-15-anthropic-multi-agent-research-system.md  june-18-mcp-feedback.md
.github/DISCUSSION_TEMPLATE/: announcements.yml
.github/workflows/: .api-integration.yml  .api-quality.yml  .client-quality.yml  .deploy.yml  commit.yml  main.yml  quality.yml  release.yml  tags.yml
api/: README.md  conftest.py  start.sh
api/api/: _standard_model_response.py  broker.py  common.py  main.py  main_router.py  main_test.py  scheduler.py  tags.py
api/core/: constants.py
api/tests/: __init__.py  models.py  pausable_memory_broker.py  utils.py
client/: next.config.mjs  package.json
company/: codex-setup.md  employee-onboarding.md
docs/: features.md  run_metadata.md
docs/cloud/: compliance.md
docs/concepts/: schemas.md  tools.md
docs/developers/: curl.md
docs/features/: benchmarks.md  deployments.md  (+6 more)
docsv2/: README-SLACK-FEEDBACK.md  README.md  mdx-components.tsx  package.json  source.config.ts  tailwind.config.js
integrations/: README.md
integrations/rust/: Cargo.toml  README.md
integrations/rust/src/: chat.rs
mcp-server/: README.md  example_agent.py  main.py  pyproject.toml
scripts/: check_mistral_models.py  conversation.py  send_customer_report.py  slack_fix_purposes.py
(+1096 files in other folders)
