[project]
name = "workflowai-mcp-server"
version = "0.1.0"
description = "MCP (Model Context Protocol) server for WorkflowAI"
requires-python = ">=3.12,<3.13"

[tool.poetry]
name = "workflowai-mcp-server"
version = "0.1.0"
description = "MCP (Model Context Protocol) server for WorkflowAI"
authors = ["WorkflowAI Team"]
readme = "README.md"
# Not deploying a lib
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastmcp = "^2.7.0"
httpx = "^0.28.1"
pydantic = "^2.0.0"
uvloop = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
ruff = "^0.9.0"
pyright = "^1.1.0"

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "venv",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "T201",
    "I",
    "W",
    "C90",
    "G",
]
ignore = []

[tool.pyright]
include = ["."]
pythonVersion = "3.12"
pythonPlatform = "Linux"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
