[package]
name = "amo-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.28.1"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json"] } # async-openai might need specific features
backoff = { version = "0.4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0" # Often needed indirectly or directly
serde_json = "1.0" # Often needed indirectly or directly
dotenvy = "0.15" # Optional: for loading .env files

[[bin]]
name = "chat"
path = "src/chat.rs"
